# cimishi

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  deny.toml  docker-compose.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
examples/blueprints/: example-blueprint.json  example-blueprint.toml  example-blueprint.yaml
examples/configs/: README.md  explicit-files.toml  pipeline-blueprint.json  pipeline-local.toml  pipeline-zip.json  pipeline.json  pipeline.toml  pipeline.yaml
examples/queries/: query.sparql
ideas/: ideas.md  named-graphs.md  package-managers.md
scripts/: check.sh  pre-push
src/: error.rs  lib.rs  main.rs  paths.rs
src/config/: mod.rs  pipeline.rs
src/interactive/: menu.rs  mod.rs  runner.rs
src/output/: csv.rs  json.rs  metadata.rs  mod.rs  terminal.rs
src/pipeline/: mod.rs
src/processors/: filter.rs  mod.rs  unzip.rs
src/query/: mod.rs  sparql.rs
src/sources/: local.rs  mod.rs  object_store_source.rs
src/wizard/: blueprint.rs  example.rs  flow.rs  mod.rs  templates.rs
tests/: .gitignore  README.md  docker-compose.test.yml  run-tests.sh
tests/configs/: azure.toml  local.toml  s3.toml
tests/data/: query.sparql  test-model-EQ.xml
tests/scripts/: setup-test-data.sh  validate-results.sh
