[package]
name = "cimishi"
version = "0.0.3"
edition = "2021"

[dependencies]
# RDF/SPARQL
oxigraph = { version = "0.4", default-features = false }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
async-trait = "0.1"
futures = "0.3"

# Cloud storage (S3, Azure, GCS, local)
object_store = { version = "0.11", features = ["aws", "azure", "gcp"] }

# Configuration
serde = { version = "1", features = ["derive"] }
toml = "0.8"
serde_yaml = "0.9"
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
console = "0.15"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Archive handling
async-compression = { version = "0.4", features = ["tokio", "gzip", "zstd"] }
async_zip = { version = "0.0.17", features = ["tokio", "deflate"] }

# HTTP (for downloading examples)
reqwest = "0.12"

# Utilities
chrono = "0.4"
bytes = "1"
glob = "0.3"
url = "2"
memory-stats = "1"
dirs = "6"
