[package]
name = "cimishi"
version = "0.0.3"
edition = "2021"
description = "Open-source CIM/RDF CLI tool for SPARQL querying across storage backends"
license = "MIT"
repository = "https://github.com/TopSwagCode/cimishi"
keywords = ["rdf", "sparql", "cim", "oxigraph", "pipeline"]
categories = ["command-line-utilities"]
authors = ["TopSwagCode"]
rust-version = "1.75"
readme = "README.md"

[dependencies]
# RDF/SPARQL
oxigraph = { version = "0.4", default-features = false }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
async-trait = "0.1"
futures = "0.3"

# Cloud storage (S3, Azure, GCS, local)
object_store = { version = "0.13", features = ["aws", "azure", "gcp"] }

# Configuration
serde = { version = "1", features = ["derive"] }
toml = "0.8"
serde_yaml = "0.9"
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
console = "0.15"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Archive handling
async-compression = { version = "0.4", features = ["tokio", "gzip", "zstd"] }
async_zip = { version = "0.0.17", features = ["tokio", "deflate"] }

# HTTP (for downloading examples)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

# Utilities
chrono = "0.4"
bytes = "1"
glob = "0.3"
url = "2"
memory-stats = "1"
dirs = "6"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
flate2 = "1"
